--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="6dp"
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/tv_Formulirpendaftaran"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="FORMULIR PENDAFTARAN"
+        android:textColor="@color/black"
+        android:layout_marginTop="30dp"
+        android:gravity="center"/>
+
+
+    <EditText
+        android:id="@+id/et_namalengkap"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_Formulirpendaftaran"
+        android:layout_marginTop="40dp"
+        android:hint="Nama Lengkap"/>
+
+    <EditText
+        android:id="@+id/et_nomorpendaftaran"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/et_namalengkap"
+        android:hint="Nomor Pendaftaran"
+        android:layout_marginTop="10dp"/>
+
+    <Spinner
+        android:id="@+id/sp_jalur"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:entries="@array/arr_JalurPendaftaran"
+        android:layout_below="@id/et_nomorpendaftaran"
+        android:layout_marginTop="10dp"/>
+
+    <CheckBox
+        android:id="@+id/cb_konfirmasi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_below="@id/sp_jalur"
+        android:text="Konfirmasi Daftar"
+        android:layout_marginTop="10dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/btn_daftar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/cb_konfirmasi"
+        android:layout_marginTop="10dp"
+        android:text="Daftar"
+        android:layout_centerHorizontal="true"/>
+
+
+</RelativeLayout>
