--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -16,5 +16,15 @@
         android:layout_marginTop="30dp"
         android:gravity="center"/>
 
+    <TextView
+        android:id="@+id/tv_nama"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nama"
+        android:textStyle="bold"
+        android:layout_below="@id/tv_konfirmasi"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"/>
+
 
  </RelativeLayout>
