--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -9,22 +9,47 @@
 
     <TextView
         android:id="@+id/tv_konfirmasi"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="KONFIRMASI PENDAFTARAN"
-        android:textSize="17sp"
-        android:layout_marginTop="30dp"
-        android:gravity="center"/>
-
-    <TextView
-        android:id="@+id/tv_nama"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nama"
+        android:text="KONFIRMASI PENDAFTARAN"
         android:textStyle="bold"
-        android:layout_below="@id/tv_konfirmasi"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"/>
+        android:textSize="17sp"
+        android:layout_marginBottom="30dp"
+        android:layout_centerHorizontal="true"/>
+
+    <TableLayout
+        android:id="@+id/tl_konfir"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_konfirmasi">
+
+        <TextView
+            android:id="@+id/tv_nama"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nama"
+            android:textStyle="bold"
+            android:layout_below="@id/tv_konfirmasi"
+            android:layout_marginTop="30dp"/>
+
+        <TextView
+            android:id="@+id/tv_nomor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nomor Pendaftaran"
+            android:textStyle="bold"
+            android:layout_below="@+id/tv_nama"
+            android:layout_marginTop="30dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tes Tertulis"
+            android:textStyle="bold"
+            android:layout_below="@id/tv_nomor"
+            android:layout_marginTop="30dp"/>
+    </TableLayout>
+
 
 
  </RelativeLayout>
