--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="FORMULIR PENDAFTARAN"
-        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:textSize="20sp"
         android:layout_marginTop="30dp"
         android:gravity="center"/>
 
