--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:entries="@array/arr_JalurPendaftaran"
         android:layout_below="@id/et_nomorpendaftaran"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"></Spinner>
 
     <CheckBox
         android:id="@+id/cb_konfirmasi"
